--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 						<!-- Логотип -->
 							<h1 id="logo"><a href="index.html">Copy Center</a></h1>
-							<p> Make everything awesome!!!</p>
+							<p>Make everything awesome!!!</p>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
 									<li><a class="icon fa-home" href="index.html"><span>Главная </span></a></li>
-								    <li><a class="icon fa-cog" href="web.html"><span>Веб-разработка</span></a></li>
+								    	<li><a class="icon fa-cog" href="web.html"><span>Веб-разработка</span></a></li>
 									<li><a class="icon fa-retweet" href="right-sidebar.html"><span> Печатные услуги</span></a></li>
 									<li><a class="icon fa-sitemap" href="no-sidebar.html"><span> Вакансии</span></a></li>
 								</ul>
@@ -35,7 +35,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<p class ="Privet "> Добро пожаловать</p><br> <h2>Выберите интересующую вас категорию</h2>
+							<p class ="Privet"> Добро пожаловать</p><br> <h2>Выберите интересующую вас категорию</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -107,7 +107,7 @@
 											<header>
 												<h2> Я хочу создать эффективный рабочий веб-проект, но не знаю с чего начать</h2>
 											</header>
-											<p> <img src="images/pic04.jpg"/></p>
+											<img src="images/pic04.jpg"/>
 											<h3> Фиолетовые обои и плитка в горошек</h3>
 											<p> Перед вами чистый лист бумаги и ручка. Стоит задача - создать конфетку с нуля. 
 											Всё кажется простым, и головой вы понимаете, что начать не сложно. Но ручка безмолвно зависает над бумагой. Знакомо? 
