--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 											<header>
 												<h2> Я хочу создать эффективный рабочий веб-проект, но не знаю с чего начать</h2>
 											</header>
-											<img src="images/pic04.jpg"/>
+											<img class="col-8 col-12-medium" src="images/pic04.jpg"/>
 											<h3> Фиолетовые обои и плитка в горошек</h3>
 											<p> Перед вами чистый лист бумаги и ручка. Стоит задача - создать конфетку с нуля. 
 											Всё кажется простым, и головой вы понимаете, что начать не сложно. Но ручка безмолвно зависает над бумагой. Знакомо? 
