--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 						<!-- Логотип -->
 							<h1 id="logo"><a href="index.html">Copy Center</a></h1>
-							<p>Make everything awesome!!!</p>
+							<p> Make everything awesome</p>
 
 						<!-- Nav -->
 							<nav id="nav">
