--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 								<ul>
 									<li><a class="icon fa-home" href="index.html"><span>Главная </span></a></li>
 								    	<li><a class="icon fa-cog" href="web.html"><span>Веб-разработка</span></a></li>
-									<li><a class="icon fa-retweet" href="right-sidebar.html"><span> Печатные услуги</span></a></li>
-									<li><a class="icon fa-sitemap" href="no-sidebar.html"><span> Вакансии</span></a></li>
+									<li><a class="icon fa-retweet" href="pechat.html"><span> Печатные услуги</span></a></li>
+									<li><a class="icon fa-sitemap" href="vacansii.html"><span> Вакансии</span></a></li>
 								</ul>
 							</nav>
 
