задел под полиграфические услуги

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 							<nav id="nav">
 								<ul>
 									<li><a class="icon fa-home" href="index.html"><span>Главная </span></a></li>
-								    	<li><a class="icon fa-cog" href="web.html"><span>Веб-разработка</span></a></li>
+								    	<li><a class="icon fa-cog" href="web.html"><span>Полиграфические услуги</span></a></li>
 									<li><a class="icon fa-retweet" href="pechat.html"><span> Печатные услуги</span></a></li>
 									<li><a class="icon fa-sitemap" href="vacansii.html"><span> Вакансии</span></a></li>
 								</ul>
