--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon fa-home" href="index.html"><span>Главная </span></a></li>
-								    	<li><a class="icon fa-cog" href="web.html"><span>Полиграфические услуги</span></a></li>
-									<li><a class="icon fa-retweet" href="pechat.html"><span> Печатные услуги</span></a></li>
-									<li><a class="icon fa-sitemap" href="vacansii.html"><span> Вакансии</span></a></li>
+									<li><a class="icon fa-home" href="index.html"><span class="nav-span">Главная </span></a></li>
+								    	<li><a class="icon fa-cog" href="web.html"><span class="nav-span">Полиграфические услуги</span></a></li>
+									<li><a class="icon fa-retweet" href="pechat.html"><span class="nav-span"> Печатные услуги</span></a></li>
+									<li><a class="icon fa-sitemap" href="vacansii.html"><span class="nav-span"> Вакансии</span></a></li>
 								</ul>
 							</nav>
 
